--- a/index.html
+++ b/index.html
@@ -1,1 +1,160 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Resume Template</title>
+    </head>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            color: #333;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        h1,
+        h2 {
+            color: #007bff;
+        }
+        .header {
+            text-align: center;
+        }
+        .header h1 {
+            margin: 10px 0;
+        }
+        .contact {
+            margin: 10px 0;
+            font-size: 14px;
+        }
+        .contact a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        .section {
+            margin: 20px 0;
+        }
+        .section h2 {
+            margin-bottom: 10px;
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 5px;
+        }
+        .item {
+            margin-bottom: 15px;
+        }
+        .item h3 {
+            margin: 0;
+            font-size: 18px;
+            color: #555;
+        }
+        .item p {
+            margin: 5px 0;
+            font-size: 14px;
+        }
+        .skills ul {
+            list-style: none;
+            padding: 0;
+        }
+        .skills ul li {
+            display: inline-block;
+            background: #007bff;
+            color: #fff;
+            padding: 5px 10px;
+            margin: 5px 5px 5px 0;
+            border-radius: 4px;
+        }
+    </style>
+
+    <body>
+        <main class="container">
+            <section class="header">
+                <h1>Your Name</h1>
+                <p class="contact">
+                    Email:
+                    <a href="mailto:yourname@example.com"
+                        >johnrhankins377@gmail.com</a
+                    >
+                    | Phone: (719) 432-5551 | LinkedIn:
+                    <a href="https://www.linkedin.com/in/john-hankins-ba2a99248/">linkedin.com/in//john-hankins-ba2a99248</a>
+                </p>
+            </section>
+            <section class="section">
+                <h2>Summary</h2>
+                <p>
+                    Passionate and pragmatic Web Development student aiming to gain an entry level web developer position while utilizing my ability 
+                    to communicate with others to help with any problem solving or general needs that may arise.
+                </p>
+            </section>
+            <section class="section">
+                <h2>Work Experience</h2>
+                <div class="item">
+                    <h3>Delivery Driver - DoorDash</h3>
+                    <p>02/2021 - 06/2022</p>
+                    <p>
+                        Delivered orders to DoorDash customers. Achieved Top Dasher status after receiving several high customer ratings.
+                        Maintained effective communication between customers and restaurants.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Customer Returns - Amazon Fulfillment Center</h3>
+                    <p>08/2021 - 12/2021</p>
+                    <p>
+                        Scanned returned packages into the system and determined if the product could be resold and I also worked in the loading bay
+                        driving a forklift.
+                    </p>
+                </div>
+            </section>
+            <div class="section">
+                <h2>Education</h2>
+                <div class="item">
+                    <h3>Bachelor of Science - University of the Cumberlands</h3>
+                    <p>Year of Graduation - 2006</p>
+                </div>
+                <div class="item">
+                    <h3>High School Diploma - Rockcastle County High School</h3>
+                    <p>Year of Graduation - 2001</p>
+                </div>
+            </section>
+            <section class="section">
+                <h2>Skills</h2>
+                <div class="skills">
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>Python</li>
+                        <li>Team Leadership</li>
+                    </ul>
+                </div>
+            </section>
+            <section class="section">
+                <h2>Projects</h2>
+                <div class="item">
+                    <h3>Media Recommendation App</h3>
+                    <p>
+                        A user can specify a genre of film that they would like to watch a movie from and, once selected, a list of 20 random
+                        movies from that genre will generate. A new random list of movies is generated no matter how many times a person selects 
+                        that particular genre.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Geek Out - Movies</h3>
+                    <p>
+                        An app where you can rate your favorite movies but can also rate the writing, directing, cinematography, special effects,
+                        and production design. 
+                    </p>
+                </div>
+            </section>
+        </main>
+    </body>
+</html>
