--- a/index.html
+++ b/index.html
@@ -4,76 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Resume Template</title>
+        <link rel="stylesheet" href="index.css">
     </head>
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            color: #333;
-            background-color: #f4f4f4;
-        }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        h1,
-        h2 {
-            color: #007bff;
-        }
-        .header {
-            text-align: center;
-        }
-        .header h1 {
-            margin: 10px 0;
-        }
-        .contact {
-            margin: 10px 0;
-            font-size: 14px;
-        }
-        .contact a {
-            color: #007bff;
-            text-decoration: none;
-        }
-        .section {
-            margin: 20px 0;
-        }
-        .section h2 {
-            margin-bottom: 10px;
-            border-bottom: 2px solid #007bff;
-            padding-bottom: 5px;
-        }
-        .item {
-            margin-bottom: 15px;
-        }
-        .item h3 {
-            margin: 0;
-            font-size: 18px;
-            color: #555;
-        }
-        .item p {
-            margin: 5px 0;
-            font-size: 14px;
-        }
-        .skills ul {
-            list-style: none;
-            padding: 0;
-        }
-        .skills ul li {
-            display: inline-block;
-            background: #007bff;
-            color: #fff;
-            padding: 5px 10px;
-            margin: 5px 5px 5px 0;
-            border-radius: 4px;
-        }
-    </style>
 
     <body>
         <main class="container">
@@ -85,7 +17,7 @@
                         >johnrhankins377@gmail.com</a
                     >
                     | Phone: (719) 432-5551 | LinkedIn:
-                    <a href="https://www.linkedin.com/in/john-hankins-ba2a99248/">linkedin.com/in//john-hankins-ba2a99248</a>
+                    <a href="https://www.linkedin.com/in/john-hankins-ba2a99248/" target="_blank" rel="noopener noreferrer">linkedin.com/in//john-hankins-ba2a99248</a>
                 </p>
             </section>
             <section class="section">
@@ -140,19 +72,7 @@
             <section class="section">
                 <h2>Projects</h2>
                 <div class="item">
-                    <h3>Media Recommendation App</h3>
-                    <p>
-                        A user can specify a genre of film that they would like to watch a movie from and, once selected, a list of 20 random
-                        movies from that genre will generate. A new random list of movies is generated no matter how many times a person selects 
-                        that particular genre.
-                    </p>
-                </div>
-                <div class="item">
-                    <h3>Geek Out - Movies</h3>
-                    <p>
-                        An app where you can rate your favorite movies but can also rate the writing, directing, cinematography, special effects,
-                        and production design. 
-                    </p>
+                    <a href="projects.html" target="_blank" rel="noopener noreferrer">Link to my Projects Page</a>
                 </div>
             </section>
         </main>
