--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Resume Template</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="/css/index.css">
     </head>
 
     <body>
         <main class="container">
+
             <section class="header">
-                <h1>Your Name</h1>
+                <h1>John Hankins</h1>
                 <p class="contact">
                     Email:
                     <a href="mailto:yourname@example.com"
@@ -27,54 +28,64 @@
                     to communicate with others to help with any problem solving or general needs that may arise.
                 </p>
             </section>
-            <section class="section">
-                <h2>Work Experience</h2>
-                <div class="item">
-                    <h3>Delivery Driver - DoorDash</h3>
-                    <p>02/2021 - 06/2022</p>
-                    <p>
-                        Delivered orders to DoorDash customers. Achieved Top Dasher status after receiving several high customer ratings.
-                        Maintained effective communication between customers and restaurants.
-                    </p>
-                </div>
-                <div class="item">
-                    <h3>Customer Returns - Amazon Fulfillment Center</h3>
-                    <p>08/2021 - 12/2021</p>
-                    <p>
-                        Scanned returned packages into the system and determined if the product could be resold and I also worked in the loading bay
-                        driving a forklift.
-                    </p>
-                </div>
-            </section>
-            <div class="section">
-                <h2>Education</h2>
-                <div class="item">
-                    <h3>Bachelor of Science - University of the Cumberlands</h3>
-                    <p>Year of Graduation - 2006</p>
-                </div>
-                <div class="item">
-                    <h3>High School Diploma - Rockcastle County High School</h3>
-                    <p>Year of Graduation - 2001</p>
-                </div>
-            </section>
-            <section class="section">
-                <h2>Skills</h2>
-                <div class="skills">
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>Python</li>
-                        <li>Team Leadership</li>
-                    </ul>
-                </div>
-            </section>
-            <section class="section">
-                <h2>Projects</h2>
-                <div class="item">
-                    <a href="projects.html" target="_blank" rel="noopener noreferrer">Link to my Projects Page</a>
-                </div>
-            </section>
+            <div class="section-grid">
+                <section class="section two-column-container">
+                    <div class="column">
+                        <h2>Work Experience</h2>
+                        <div class="item">
+                            <h3>Delivery Driver - DoorDash</h3>
+                            <p>02/2021 - 06/2022</p>
+                            <p>
+                                Delivered orders to DoorDash customers. Achieved Top Dasher status after receiving several high customer ratings.
+                                Maintained effective communication between customers and restaurants.
+                            </p>
+                        </div>
+
+                        <div class="item">
+                            <h3>Customer Returns - Amazon Fulfillment Center</h3>
+                            <p>08/2021 - 12/2021</p>
+                            <p>
+                                Scanned returned packages into the system and determined if the product could be resold and I also worked in the loading bay
+                                driving a forklift.
+                            </p>
+                        </div>
+
+                    </div>
+
+                    <div class="section">
+                        <h2>Education</h2>
+                        <div class="item">
+                            <h3>Bachelor of Science - University of the Cumberlands</h3>
+                            <p>Year of Graduation - 2006</p>
+                        </div>
+                        <div class="item">
+                            <h3>High School Diploma - Rockcastle County High School</h3>
+                            <p>Year of Graduation - 2001</p>
+                        </div>
+                    </div>
+                </section>
+                
+                <section class="section">
+                    <h2>Skills</h2>
+                    <div class="skills">
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>Python</li>
+                            <li>Team Leadership</li>
+                        </ul>
+                    </div>
+                </section>
+
+                <section class="section">
+                    <h2>Projects</h2>
+                    <div class="item">
+                        <a href="projects.html" target="_blank" rel="noopener noreferrer">Link to my Projects Page</a>
+                    </div>
+                </section>
+            </div>
+
         </main>
     </body>
 </html>
