Finshed with each media query design. Will begin to tailor the resume now but the design is how I like it.

--- a/index.html
+++ b/index.html
@@ -10,30 +10,29 @@
     <body>
         <main class="container">
 
-            <header>
-                <h1>John Hankins</h1>
-                <p class="contact">
-                    Email:
-                    <a href="mailto:yourname@example.com"
-                        >johnrhankins377@gmail.com</a
-                    >
-                    | Phone: (719) 432-5551 | LinkedIn:
-                    <a href="https://www.linkedin.com/in/john-hankins-ba2a99248/" target="_blank" rel="noopener noreferrer">linkedin.com/in//john-hankins-ba2a99248</a>
-                </p>
-            </header>
+            <h1>John Hankins</h1>
+            <div class="desktop-columns">
+                <header>
+                    <h2 class="desktop-only">Contact: </h2>
+                    <p class="contact">
+                        <a href="mailto:yourname@example.com">Email: johnrhankins377@gmail.com</a>
+                        | Phone: (719) 432-5551 | 
+                        <a href="https://www.linkedin.com/in/john-hankins-ba2a99248/" target="_blank" rel="noopener noreferrer">LinkedIn: John Hankins</a>
+                    </p>
+                </header>
 
-            <section class="summary-section">
-                <h2>Summary</h2>
-                <p>
-                    Passionate and pragmatic Web Development student aiming to gain an entry level web developer position while utilizing my ability 
-                    to communicate with others to help with any problem solving or general needs that may arise.
-                </p>
-            </section>
+                <section class="summary-section">
+                    <h2>Summary</h2>
+                    <p>
+                        Passionate and pragmatic Web Development student aiming to gain an entry level web developer position while utilizing my ability 
+                        to communicate with others to help with any problem solving or general needs that may arise.
+                    </p>
+                </section>
+            </div>
 
             <div class="section-grid">
 
                 <div class="column-work-experience">
-
                     <h2>Work Experience</h2>
                     <div class="work-items">
                         <section class="work-item1">
@@ -54,7 +53,6 @@
                             </p>
                         </section>
                     </div>
-
                 </div>
 
                 <div class="education-section">
