--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <nav>
-            <ul>
+            <ul id="repo-list">
                 <li class="recipe">
                     <a href="https://github.com/jrhankins883/Recipe-Page" target="_blank" rel="noopener noreferrer">Recipe Page</a> - In this little project I created, I just took the recipe 
                     for one of my favorite meals and made a simple recipe page. I tooled around with some JavaScript to make the page a little
@@ -32,5 +32,6 @@
             </ul>
         </nav>
     </main>
+    <script src="github.js"></script>
 </body>
 </html>
