Added a media query to make it responsive on a smaller screen

--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <nav>
-            <ul id="repo-list">
+            <ul id="repo-list" class="repo-grid">
                 <li class="recipe">
                     <a href="https://github.com/jrhankins883/Recipe-Page" target="_blank" rel="noopener noreferrer">Recipe Page</a> - In this little project I created, I just took the recipe 
                     for one of my favorite meals and made a simple recipe page. I tooled around with some JavaScript to make the page a little
