Live Server isn't running my resume page correctly, trying to fix

--- a/resume.html
+++ b/resume.html
@@ -13,9 +13,7 @@
                 <h1>Your Name</h1>
                 <p class="contact">
                     Email:
-                    <a href="mailto:yourname@example.com"
-                        >johnrhankins377@gmail.com</a
-                    >
+                    <a href="mailto:yourname@example.com">johnrhankins377@gmail.com</a>
                     | Phone: (719) 432-5551 | LinkedIn:
                     <a href="https://www.linkedin.com/in/john-hankins-ba2a99248/" target="_blank" rel="noopener noreferrer">linkedin.com/in//john-hankins-ba2a99248</a>
                 </p>
