--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,6 @@
             </ul>
         </nav>
     </main>
-    <script src="github.js"></script>
+    <script src="js/github.js"></script>
 </body>
 </html>
