--- a/index.html
+++ b/index.html
@@ -9,70 +9,89 @@
 
     <body>
         <main class="container">
-            <section class="header">
-                <h1>Your Name</h1>
-                <p class="contact">
-                    Email:
-                    <a href="mailto:yourname@example.com">johnrhankins377@gmail.com</a>
-                    | Phone: (719) 432-5551 | LinkedIn:
-                    <a href="https://www.linkedin.com/in/john-hankins-ba2a99248/" target="_blank" rel="noopener noreferrer">linkedin.com/in//john-hankins-ba2a99248</a>
-                </p>
-            </section>
-            <section class="section">
-                <h2>Summary</h2>
-                <p>
-                    Passionate and pragmatic Web Development student aiming to gain an entry level web developer position while utilizing my ability 
-                    to communicate with others to help with any problem solving or general needs that may arise.
-                </p>
-            </section>
-            <section class="section">
-                <h2>Work Experience</h2>
-                <div class="item">
-                    <h3>Delivery Driver - DoorDash</h3>
-                    <p>02/2021 - 06/2022</p>
-                    <p>
-                        Delivered orders to DoorDash customers. Achieved Top Dasher status after receiving several high customer ratings.
-                        Maintained effective communication between customers and restaurants.
+
+            <h1>John Hankins</h1>
+            
+            <div class="desktop-columns">
+                <header>
+                    <h2 class="desktop-only">Contact: </h2>
+                    <p class="contact">
+                        <a href="mailto:yourname@example.com">Email: johnrhankins377@gmail.com</a>
+                        | Phone: (719) 432-5551 | 
+                        <a href="https://www.linkedin.com/in/john-hankins-ba2a99248/" target="_blank" rel="noopener noreferrer">LinkedIn: John Hankins</a>
                     </p>
-                </div>
-                <div class="item">
-                    <h3>Customer Returns - Amazon Fulfillment Center</h3>
-                    <p>08/2021 - 12/2021</p>
+                </header>
+
+                <section class="summary-section">
+                    <h2>Summary</h2>
                     <p>
-                        Scanned returned packages into the system and determined if the product could be resold and I also worked in the loading bay
-                        driving a forklift.
+                        Passionate and pragmatic Web Development student aiming to gain an entry level web developer position while utilizing my ability 
+                        to communicate with others to help with any problem solving or general needs that may arise.
                     </p>
+                </section>
+            </div>
+
+            <div class="section-grid">
+
+                <div class="column-work-experience">
+                    <h2>Work Experience</h2>
+                    <div class="work-items">
+                        <section class="work-item1">
+                            <h3>Delivery Driver - DoorDash</h3>
+                            <p>02/2021 - 06/2022</p>
+                            <p>
+                                Delivered orders to DoorDash customers. Achieved Top Dasher status after receiving several high customer ratings.
+                                Maintained effective communication between customers and restaurants.
+                            </p>
+                        </section>
+
+                        <section class="work-item2">
+                            <h3>Customer Returns - Amazon Fulfillment Center</h3>
+                            <p>08/2021 - 12/2021</p>
+                            <p>
+                                Scanned returned packages into the system and determined if the product could be resold and I also worked in the loading bay
+                                driving a forklift.
+                            </p>
+                        </section>
+                    </div>
                 </div>
-            </section>
-            <div class="section">
-                <h2>Education</h2>
-                <div class="item">
-                    <h3>Bachelor of Science - University of the Cumberlands</h3>
-                    <p>Year of Graduation - 2006</p>
+
+                <div class="education-section">
+                    <h2>Education</h2>
+                    <div class="item">
+                        <h3>Bachelor of Science - University of the Cumberlands</h3>
+                        <p>Year of Graduation - 2006</p>
+                    </div>
+                    <div class="item">
+                        <h3>High School Diploma - Rockcastle County High School</h3>
+                        <p>Year of Graduation - 2001</p>
+                    </div>
                 </div>
-                <div class="item">
-                    <h3>High School Diploma - Rockcastle County High School</h3>
-                    <p>Year of Graduation - 2001</p>
+
+                <div class="bottom-grid">
+                    <div class="skills-section">
+                        <h2>Skills</h2>
+                        <section class="skills">
+                            <ul>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JavaScript</li>
+                                <li>Python</li>
+                                <li>Team Leadership</li>
+                            </ul>
+                        </section>
+                    </div>
+
+                    <div class="projects-section">
+                        <h2>Projects</h2>
+                        <section class="item">
+                            <a href="projects.html" target="_blank" rel="noopener noreferrer">Link to my Projects Page</a>
+                        </section>
+                    </div>
                 </div>
-            </section>
-            <section class="section">
-                <h2>Skills</h2>
-                <div class="skills">
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>Python</li>
-                        <li>Team Leadership</li>
-                    </ul>
-                </div>
-            </section>
-            <section class="section">
-                <h2>Projects</h2>
-                <div class="item">
-                    <a href="projects.html" target="_blank" rel="noopener noreferrer">Link to my Projects Page</a>
-                </div>
-            </section>
+                
+            </div>
+
         </main>
     </body>
 </html>
